--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,24 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - "master"
+      - "staging"
 
 jobs:
   build-and-deploy-to-github-pages:
     runs-on: ubuntu-latest
     steps:
+      - name: Install qawolf test dependencies
+        run: |
+          sudo apt update
+          # chromium dependencies
+          sudo apt-get install libgbm1
+          # webkit dependencies
+          sudo apt-get install libwoff1 libopus0 libwebp6 libwebpdemux2 libenchant1c2a libgudev-1.0-0 libsecret-1-0 libhyphen0 libgdk-pixbuf2.0-0 libegl1 libgles2 libevent-2.1-6 libnotify4 libvpx5 libxslt1.1
+          # ffmpeg
+          sudo apt-get install -y ffmpeg
+
       - name: Checkout 🛎️
         uses: actions/checkout@v2
         with:
@@ -25,10 +37,23 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-      
-      - name: Install dependencies
+
+      - name: Install project dependencies
         run: |
           yarn
+
+      - name: Execute tests
+        run: yarn test --headless
+        env:
+          FFMPEG_PATH: /usr/bin/ffmpeg
+          QAW_ARTIFACT_PATH: ${{ github.workspace }}/artifacts
+
+      - name: Upload test artifacts
+        if: always()
+        uses: actions/upload-artifact@master
+        with:
+          name: qawolf
+          path: ${{ github.workspace }}/artifacts
 
       - name: Build
         run: |
