refactor(pipeline): add test artifact name change

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@master
         with:
-          name: qawolf
+          name: qawolf-test-result
           path: ${{ github.workspace }}/artifacts
 
       - name: Build
