fix(pipeline): add fix for local tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,9 @@ jobs:
         run: |
           yarn
 
+      - name: Start local server
+        run: yarn start & npx wait-on http://localhost:3000
+
       - name: Execute tests
         run: yarn test --headless
         env:
