--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "less-loader": "^5.0.0",
     "playwright": "0.11.1-next.1584577781703",
     "qawolf": "0.12.3",
-    "react-app-rewired": "^2.1.5"
+    "react-app-rewired": "^2.1.5",
+    "wait-on": "^4.0.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
