--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Start local server
         run: yarn start
 
-      - name: Wait for server
+      - name: Wait for local server
         run: yarn run wait-on http://localhost:3000/react-antd-todo --timeout 120000
 
       - name: Execute tests
