feat: use serve

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,14 +38,19 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Install project dependencies
-        run: |
-          yarn
+        run: yarn
 
-      - name: Start local server
-        run: yarn start
+      - name: Install serve
+        run: yarn global add serve
+
+      - name: Build
+        run: yarn build
+
+      - name: Serve
+        run: serve -s build
 
       - name: Wait for local server
-        run: yarn run wait-on http://localhost:3000/react-antd-todo --timeout 600000
+        run: yarn run wait-on http://localhost:3000 --timeout 600000
 
       - name: Execute tests
         run: yarn test --headless
