feat: list build dir

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Build
         run: yarn build
 
+      - name: Check build
+        run: echo $(ls build)
+
       - name: Serve
         run: yarn run serve -s build
 
