feat: just run serve

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,11 +43,8 @@ jobs:
       - name: Build
         run: yarn build
 
-      - name: Check build
-        run: echo $(ls build)
-
       - name: Serve
-        run: yarn run serve -s build
+        run: serve -s build
 
       - name: Wait for local server
         run: yarn run wait-on http://localhost:3000 --timeout 600000
