--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.12.31",
     "@types/react": "^16.9.25",
     "@types/react-dom": "^16.9.5",
+    "@types/uuid": "^7.0.2",
     "antd": "^4.0.3",
     "gh-pages": "^2.2.0",
     "prop-types": "^15.7.2",
@@ -21,9 +22,12 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
     "cz-conventional-changelog": "3.1.0",
