--- a/package.json
+++ b/package.json
@@ -3,42 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.3.0",
-    "@testing-library/react": "^10.0.2",
-    "@testing-library/user-event": "^10.0.1",
-    "@types/jest": "^25.1.5",
-    "@types/node": "^12.12.34",
-    "@types/react": "^16.9.25",
-    "@types/react-dom": "^16.9.6",
-    "@types/uuid": "^7.0.2",
-    "antd": "^4.1.3",
-    "gh-pages": "^2.2.0",
+    "@testing-library/jest-dom": "^5.9.0",
+    "@testing-library/react": "^10.0.6",
+    "@testing-library/user-event": "^11.0.0",
+    "@types/jest": "^25.2.3",
+    "@types/node": "^14.0.9",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/uuid": "^8.0.0",
+    "antd": "^4.3.1",
+    "gh-pages": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.8.3",
-    "uuid": "^7.0.3",
-    "snyk": "^1.316.1"
+    "typescript": "^3.9.3",
+    "uuid": "^8.1.0",
+    "snyk": "^1.334.0"
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.7",
-    "@types/react-router-dom": "^5.1.3",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
     "babel-plugin-import": "^1.13.0",
-    "customize-cra": "^0.9.1",
-    "cz-conventional-changelog": "3.1.0",
-    "husky": "^4.2.3",
-    "less": "^3.11.1",
-    "less-loader": "^5.0.0",
-    "playwright": "0.11.1-next.1584577781703",
-    "qawolf": "0.12.3",
-    "react-app-rewired": "^2.1.5",
-    "wait-on": "^4.0.1"
+    "customize-cra": "^1.0.0",
+    "cz-conventional-changelog": "3.2.0",
+    "husky": "^4.2.5",
+    "less": "^3.11.2",
+    "less-loader": "^6.1.0",
+    "playwright": "1.0.2",
+    "qawolf": "1.0.1",
+    "react-app-rewired": "^2.1.6",
+    "wait-on": "^5.0.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -47,9 +47,7 @@
     "build": "react-app-rewired build",
     "test": "yarn qawolf test",
     "eject": "react-scripts eject",
-    "commit": "git-cz",
-    "snyk-protect": "snyk protect",
-    "prepare": "yarn run snyk-protect"
+    "commit": "git-cz"
   },
   "eslintConfig": {
     "extends": "react-app"
