--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "redux-persist": "6.0.0",
     "redux-thunk": "2.3.0",
     "typescript": "3.9.3",
-    "uuid": "8.1.0",
-    "snyk": "1.334.0"
+    "uuid": "8.1.0"
   },
   "devDependencies": {
     "@types/react-redux": "7.1.9",
