--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "16.9.8",
     "@types/uuid": "8.0.0",
     "antd": "4.3.3",
+    "playwright": "1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-redux": "7.2.0",
