build(pipeline): add new checks for cache

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,8 @@ name: CI
 on:
   push:
     branches:
-      - "master"
-      - "staging"
+      - 'master'
+      - 'staging'
 
 jobs:
   build-and-deploy-to-github-pages:
@@ -29,17 +29,30 @@ jobs:
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
 
-      - name: Check for yarn cache
-        uses: actions/cache@v1.1.2
-        id: yarn-cache
+      - name: Cache yarn cache
+        uses: actions/cache@v2
+        id: cache-yarn-cache
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      - name: Install project dependencies
-        if: steps.yarn-cache.outputs.cache-hit != 'true'
+      - name: Cache node_modules
+        id: cache-node-modules
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ matrix.node-version }}-nodemodules-
+
+      - run: yarn
+        if: |
+          steps.cache-yarn-cache.outputs.cache-hit != 'true' ||
+          steps.cache-node-modules.outputs.cache-hit != 'true'
+
+      - name: Build project
         run: yarn build
 
       - name: Serve
