--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/react-dom": "16.9.8",
     "@types/uuid": "8.0.0",
     "antd": "4.3.4",
-    "playwright": "1.1.1",
+    "playwright": "1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-redux": "7.2.0",
@@ -42,7 +42,8 @@
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
     "build": "react-app-rewired build",
-    "test": "yarn qawolf test",
+    "wait-for-local-server": "yarn wait-on http://localhost:3000 --timeout 600000",
+    "test": "yarn wait-for-local-server && yarn qawolf test",
     "eject": "react-scripts eject",
     "commit": "git-cz"
   },
