--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,16 +9,6 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Install qawolf test dependencies
-        run: |
-          sudo apt update
-          # chromium dependencies
-          sudo apt-get install libgbm1
-          # webkit dependencies
-          sudo apt-get install libwoff1 libopus0 libwebp6 libwebpdemux2 libenchant1c2a libgudev-1.0-0 libsecret-1-0 libhyphen0 libgdk-pixbuf2.0-0 libegl1 libgles2 libevent-2.1-6 libnotify4 libvpx5 libxslt1.1
-          # ffmpeg
-          sudo apt-get install -y ffmpeg
-
       - name: Checkout 🛎️
         uses: actions/checkout@v2
         with:
@@ -28,7 +18,7 @@ jobs:
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
 
-      - name: Cache yarn cache
+      - name: Cache yarn
         uses: actions/cache@v2
         id: cache-yarn-cache
         with:
@@ -53,22 +43,6 @@ jobs:
 
       - name: Build project
         run: yarn build
-
-      - name: Serve
-        run: npx serve -l 3000 -s build &
-
-      - name: Execute tests
-        run: yarn test --headless
-        env:
-          FFMPEG_PATH: /usr/bin/ffmpeg
-          QAW_ARTIFACT_PATH: ${{ github.workspace }}/artifacts
-
-      - name: Upload test artifacts
-        if: always()
-        uses: actions/upload-artifact@master
-        with:
-          name: qawolf-test-result
-          path: ${{ github.workspace }}/artifacts
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3
