--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:13.14.0-alpine
+FROM node:15-alpine as builder
 
 LABEL maintainer="Leonardo Pliskieviski <leonardopliski@gmail.com>"
 
@@ -9,6 +9,14 @@ WORKDIR /usr/src/app
 COPY package.json yarn.lock ./
 RUN yarn --pure-lockfile
 
-COPY . .
+COPY . ./
 
-EXPOSE 3000
+RUN yarn build
+
+FROM nginx:alpine
+
+COPY --from=builder /usr/src/app/build /usr/share/nginx/html
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
