--- a/package.json
+++ b/package.json
@@ -3,37 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "5.11.0",
-    "@testing-library/react": "10.4.5",
-    "@testing-library/user-event": "12.0.11",
-    "@types/jest": "26.0.4",
-    "@types/node": "14.0.18",
-    "@types/react": "16.9.44",
-    "@types/react-dom": "16.9.8",
-    "@types/uuid": "8.0.0",
-    "antd": "4.6.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-redux": "7.2.0",
+    "@testing-library/jest-dom": "5.11.9",
+    "@testing-library/react": "11.2.3",
+    "@testing-library/user-event": "12.6.2",
+    "@types/jest": "26.0.20",
+    "@types/node": "14.14.22",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "@types/uuid": "8.3.0",
+    "antd": "4.11.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "4.0.1",
     "redux": "4.0.5",
     "redux-persist": "6.0.0",
     "redux-thunk": "2.3.0",
-    "typescript": "4.0.2",
-    "uuid": "8.2.0"
+    "typescript": "4.1.3",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
-    "@types/react-redux": "7.1.9",
-    "@types/react-router-dom": "5.1.5",
-    "babel-plugin-import": "1.13.0",
+    "@types/react-redux": "7.1.16",
+    "@types/react-router-dom": "5.1.7",
+    "babel-plugin-import": "1.13.3",
     "customize-cra": "1.0.0",
-    "cz-conventional-changelog": "3.2.0",
-    "husky": "4.2.5",
-    "less": "3.11.3",
-    "less-loader": "6.2.0",
-    "react-app-rewired": "2.1.6",
-    "wait-on": "5.0.1"
+    "cz-conventional-changelog": "3.3.0",
+    "husky": "4.3.8",
+    "less": "4.1.0",
+    "less-loader": "7.3.0",
+    "react-app-rewired": "^2.1.8",
+    "wait-on": "5.2.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
