--- a/Docker/Dockerfile.dev
+++ b/Docker/Dockerfile.dev
@@ -6,8 +6,8 @@ RUN mkdir -p /usr/src/app
 
 WORKDIR /usr/src/app
 
-COPY package.json yarn.lock ./
-RUN yarn --pure-lockfile
+COPY package.json package-lock.json ./
+RUN npm i
 
 COPY . .
 
