--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "5.11.9",
-    "@testing-library/react": "11.2.3",
-    "@testing-library/user-event": "12.6.2",
     "@types/jest": "26.0.20",
     "@types/node": "14.14.22",
     "@types/react": "17.0.0",
@@ -24,22 +21,29 @@
     "uuid": "8.3.2"
   },
   "devDependencies": {
+    "@types/faker": "^5.1.5",
     "@types/react-redux": "7.1.16",
     "@types/react-router-dom": "5.1.7",
     "babel-plugin-import": "1.13.3",
     "customize-cra": "1.0.0",
     "cz-conventional-changelog": "3.3.0",
+    "faker": "^5.2.0",
     "husky": "4.3.8",
+    "jest": "^26.6.0",
     "less": "4.1.0",
     "less-loader": "7.3.0",
     "react-app-rewired": "^2.1.8",
+    "ts-jest": "^26.4.4",
     "wait-on": "5.2.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "wait-for-local-server": "yarn wait-on http://localhost:3000 --timeout 600000",
+    "wait-for-local-server": "npm wait-on http://localhost:3000 --timeout 600000",
     "eject": "react-scripts eject",
+    "test": "jest",
+    "test:watch": "npm test -- --watch",
+    "debug": "node --debug-brk --inspect ./node_modules/.bin/jest -i",
     "commit": "git-cz"
   },
   "eslintConfig": {
