build: add legacy peer deps arg
* We need to add the legacy peer deps argument due to the dependencies breaking changes of each other

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,7 +7,7 @@ RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
 COPY package.json package-lock.json ./
-RUN npm i
+RUN npm i --legacy-peer-deps
 
 COPY . .
 
