--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           RUNNER_TEMP: /tmp
 
       - name: Install dependencies
-        run: npm i
+        run: npm i --legacy-peer-deps
 
       - name: Run tests
         run: npm run test
